# idc-sci2026

./: .gitignore  README.md
paper/first_version/: _plantilla_SCI_reference.tex  _sci2022_reference.bib  main.tex  referencias.bib  sciarticle.cls
paper/second_version/: crc_SCI.sty  main.tex  referencias.bib
paper/second_version/Figuras/: fig_idc_activity_mo.tex  fig_idc_activity_so.tex  fig_idc_mo_es.tex  fig_idc_so_es.tex
rerun/: CMakeLists.txt  aggregate.py  make_gof.py  run_mo_yacht.sh  run_so_photo_wf3.sh
rerun/cpp/: parity_dump.cpp  run_idc_photo_wf3.cpp  run_idc_yacht_mo2.cpp  yaml_constraints.h
rerun/nn_train/: BASELINES.md
rerun/nn_train/photo_wf3/: constraints.yaml
rerun/nn_train/photo_wf3/model/: training_summary.txt
rerun/nn_train/photo_wf3_h8/model/: neural_network.json  training_summary.txt
rerun/nn_train/photo_wf3_wide/model/: neural_network.json  training_summary.txt
rerun/nn_train/yacht_h4/model/: neural_network.json  training_summary.txt
rerun/pybaseline/branch_a_same_surface/python/: nn_loader.py  problem_pymoo.py  run_pymoo.py
rerun/pybaseline/metrics/: standard_metrics.py
rerun/pybaseline/problems/: photo_wf3.yaml
rerun/results/: _smoke_pymoo.csv  parity_h8.csv  parity_photo_wf3.csv  parity_wide.csv  parity_yacht_h4.csv  photo_wf3_idc_full.csv  photo_wf3_idc_seed0.csv  photo_wf3_idc_seed1.csv  photo_wf3_idc_seed2.csv  photo_wf3_idc_seed3.csv  photo_wf3_idc_seed4.csv  photo_wf3_pymoo_seed0.csv  photo_wf3_pymoo_seed1.csv  photo_wf3_pymoo_seed2.csv  photo_wf3_pymoo_seed3.csv  photo_wf3_pymoo_seed4.csv  smoke_photo_wf3.csv  smoke_yacht_mo_fronts.csv  yacht_mo_idc_fronts.csv  yacht_mo_pymoo.csv  yacht_mo_pymoo_fronts.csv
rerun/surrogates/: photo_wf3_nn.json  yacht.csv  yacht_nn.json  yacht_nn.py
rerun/tables/: mo_yacht.tex  so_photo_wf3.tex
